--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ colorama==0.4.6
 comtypes==1.4.10
 diskcache==5.6.3
 docopt==0.6.2
+docutils==0.21.2
 filelock==3.18.0
+filetype==1.2.0
 fsspec==2025.3.2
 google-api-core==2.24.2
 google-api-python-client==2.167.0
@@ -21,6 +23,11 @@ huggingface-hub==0.30.2
 idna==3.10
 Jinja2==3.1.6
 Js2Py==0.74
+Kivy==2.3.1
+Kivy-Garden==0.1.5
+kivy_deps.angle==0.4.0
+kivy_deps.glew==0.3.1
+kivy_deps.sdl2==0.8.0
 llama_cpp_python==0.3.8
 MarkupSafe==3.0.2
 mpmath==1.3.0
@@ -29,6 +36,7 @@ networkx==3.4.2
 numpy==2.2.5
 oauthlib==3.2.2
 packaging==24.2
+pillow==10.4.0
 pipwin==0.5.2
 proto-plus==1.26.1
 protobuf==6.30.2
@@ -37,10 +45,14 @@ pyasn1_modules==0.4.2
 PyAudio==0.2.14
 pydub==0.25.1
 pygame==2.6.1
+Pygments==2.19.1
 pyjsparser==2.7.1
 pyparsing==3.2.3
 pypiwin32==223
 PyPrind==2.11.3
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.17.0
 pySmartDL==1.3.4
 python-vlc==3.0.21203
 pyttsx3==2.98
